# kellum_library

./: Cargo.toml  README.md  schema.sql
src/: data_models.rs  database_services.rs  errors.rs  main.rs  service_endpoints.rs
src/data_models/: auth_models.rs  game.rs  movie.rs
src/database_services/: authentication_services.rs  database_utilities.rs  game_database.rs  movie_database.rs
src/errors/: auth_errors.rs  servive_errors.rs
src/service_endpoints/: auth_servce.rs  game_service.rs  movie_service.rs
