[package]
name = "kellum_library"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
chrono = "0.4.41"
derive_more = "2.0.1"
rusqlite = { version = "0.35.0", features = ["functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
